force-app/main/default/objects/Performance_Alert__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Context information for the performance alert</description>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>