force-app/main/default/objects/Performance_Alert__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Performance alert message</description>
    <label>Message</label>
    <length>32768</length>

    <type>LongTextArea</type>
</CustomField>