force-app/main/default/objects/Performance_Alert__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Timestamp when the performance alert was generated</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>