force-app/main/default/objects/Performance_Alert__e/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User who triggered the performance alert</description>
    <label>User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>